small sidebar styling fix to prevent shadow overlap

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -183,7 +183,7 @@ a {
     }
 
     & .sidebar.left {
-      left: calc(calc(100vw - $pageWidth) / 2 - $sidePanelWidth);
+      left: calc(calc(100vw - $pageWidth) / 2.1 - $sidePanelWidth);
       @media all and (max-width: $fullPageWidth) {
         gap: 0;
         align-items: center;
